--- a/WebAPI/packages.config
+++ b/WebAPI/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.7.0" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
+  <package id="Google.Apis" version="1.10.0" targetFramework="net452" />
+  <package id="Google.Apis.Auth" version="1.10.0" targetFramework="net452" />
+  <package id="Google.Apis.Core" version="1.10.0" targetFramework="net452" />
+  <package id="log4net" version="2.0.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="1.2.3" targetFramework="net452" />
@@ -15,6 +20,10 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net452" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net452" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net452" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
   <package id="Swashbuckle" version="5.0.0" targetFramework="net452" />
@@ -23,4 +32,5 @@
   <package id="System.Json" version="4.0.20126.16343" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net452" />
+  <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net452" />
 </packages>
