--- a/AzureDataAccess/App.config
+++ b/AzureDataAccess/App.config
@@ -1,11 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AzurePollAppDBContext" connectionString="Server=tcp:azurepollapp.database.windows.net,1433;Database=AzurePollAppDB;User ID=george@azurepollapp;Password={Irm@ge0mi};Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="AzurePollAppDBContext" connectionString="Data Source=azurepollapp.database.windows.net;Initial Catalog=AzurePollAppDB;Persist Security Info=True;User ID=george;Password=Irm@ge0mi;MultipleActiveResultSets=True;Encrypt=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
