--- a/BusinessLogicTests/BusinessLogicTests.csproj
+++ b/BusinessLogicTests/BusinessLogicTests.csproj
@@ -36,6 +36,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Moq, Version=4.2.1409.1722, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\Moq.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -51,10 +59,19 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AuthLogicTests.cs" />
+    <Compile Include="CategoryLogicTests.cs" />
     <Compile Include="FormLogicTests.cs" />
+    <Compile Include="Mock\AzureDataAccessMock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TokenLogicTests.cs" />
+    <Compile Include="UserLogicTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AzureDataAccess\AzureDataAccess.csproj">
+      <Project>{9a8ecafc-f6f7-4730-9bff-a702174f8088}</Project>
+      <Name>AzureDataAccess</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj">
       <Project>{B3850F5B-F1D1-419C-A126-B21B4B8AE36F}</Project>
       <Name>BusinessLogic</Name>
@@ -62,6 +79,10 @@
     <ProjectReference Include="..\DataTransferObject\DataTransferObject.csproj">
       <Project>{6564679D-E974-4A91-ADB6-A0263BB40411}</Project>
       <Name>DataTransferObject</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Entities\Entities.csproj">
+      <Project>{F358FEE4-F9EA-450D-8D66-542B1AB29A89}</Project>
+      <Name>Entities</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
