--- a/WebAPI/packages.config
+++ b/WebAPI/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.7.0" targetFramework="net452" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="Google.Apis" version="1.10.0" targetFramework="net452" />
   <package id="Google.Apis.Auth" version="1.10.0" targetFramework="net452" />
@@ -25,6 +26,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net452" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Moq" version="4.5.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="Swashbuckle" version="5.0.0" targetFramework="net452" />
   <package id="Swashbuckle.Core" version="5.0.0" targetFramework="net452" />
