--- a/AzureDataAccess/App.config
+++ b/AzureDataAccess/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AzurePollAppDBContext" connectionString="Data Source=azurepollapp.database.windows.net;Initial Catalog=AzurePollAppDB;Persist Security Info=True;User ID=george;Password=Irm@ge0mi;MultipleActiveResultSets=True;Encrypt=True"
+    <add name="AzurePollAppDBContext" connectionString="Data Source=azurepollapp.database.windows.net;Initial Catalog=AzurePollAppDB;Persist Security Info=True;User ID=george;Password=******;MultipleActiveResultSets=True;Encrypt=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
