--- a/WebAPI/Web.config
+++ b/WebAPI/Web.config
@@ -6,7 +6,7 @@
 <configuration>
 
   <connectionStrings>
-    <add name="AzurePollAppDBContext" connectionString="Server=tcp:azurepollapp.database.windows.net,1433;Database=AzurePollAppDB;User ID=george@azurepollapp;Password=Irm@ge0mi;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="AzurePollAppDBContext" connectionString="Server=tcp:azurepollapp.database.windows.net,1433;Database=AzurePollAppDB;User ID=george@azurepollapp;Password=*******;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
   </appSettings>
